src/pages/common/Home.module.scss
@charset "utf-8";

.home_wrap {
  margin: 40px auto 80px;
  .banner_wrap {
    max-width: 1400px;
    width: 86%;
    margin: 0 auto;
    padding: 0;
    .banner {
      background-color: #888;
      max-width: 1280px;
      height: 178px;
      position: relative;
      border-radius: 5px;
      & > div {
        position: absolute;
      }
      .opacity {
        width: 100%;
        height: 100%;
        background-color: #000;
        border-radius: 5px;
        mask-image: linear-gradient(
          to top,
          rgba(0, 0, 0, 0.4) 0%,
          rgba(0, 0, 0, 0) 60%
        );
      }
      .content {
        left: 20px;
        bottom: 16px;
        color: #fafafa;
        & > button {
          color: #fafafa;
          background-color: #6269f5;
          border: 1px solid #fafafa;
          border-radius: 5px;
          padding: 8px 16px;
          cursor: pointer;
          margin-bottom: 4px;
        }
      }
    }
    .banner_main {
      background: url(@/assets/images/banner_main.png) no-repeat center;
      background-size: cover;
    }
    .banner_renewal {
      background: url(@/assets/images/banner_renewal_event.png) no-repeat center;
      background-size: cover;
    }
    .banner_community {
      background: url(@/assets/images/banner_community.png) no-repeat center;
      background-size: cover;
    }
    .banner_training {
      background: url(@/assets/images/banner_training.png) no-repeat center;
      background-size: cover;
    }
  }
  .content_wrap {
    width: 86%;
    margin: 0 auto;
    padding: 0;
    .review_wrap,
    .community_wrap {
      margin-top: 80px;
      .header {
        display: flex;
        flex-direction: column;
        gap: 8px;
        justify-content: flex-start;
        align-items: flex-start;
        flex-wrap: wrap;
        & > h3 {
          white-space: nowrap;
        }
        .tab_wrap {
          width: 100%;
          flex-grow: 1;
          display: flex;
          justify-content: space-between;
          align-items: center;
          gap: 5px;
          .tab {
            display: flex;
            flex-direction: row;
            gap: 2px;
            flex-wrap: nowrap;
            & > button {
              padding: 0 10px;
              height: 30px;
              flex: none;
              color: #888;
              & > h5 {
                line-height: 22px;
              }
            }
            .current_tab {
              background-color: #6269f5;
              color: #fafafa;
              border-radius: 5px;
            }
          }
          .btn_more {
            color: #aaa;
            display: flex;
            align-items: center;
            margin-left: auto;
            line-height: 22px;
            font-size: 0;
            & > img {
              width: 14px;
              height: 7px;
            }
          }
        }
      }
    }
    .community_wrap {
      .body_wrap {
        & > ul {
          .item {
            margin-top: 20px;
            .type {
              width: 94px;
              padding: 2px 8px;
              border: 1px solid #aaa;
              border-radius: 5px;
              color: #aaa;
              height: 26px;
              text-wrap: nowrap;
              text-align: center;
            }
            .content {
              margin-top: 8px;
              display: flex;
              flex-direction: column;
              flex-wrap: wrap;
              gap: 10px;
              justify-content: space-between;
              overflow: hidden;
              .title_wrap {
                display: flex;
                flex-direction: column;
                gap: 4px;
                justify-content: space-between;
                overflow: hidden;
                .title {
                  text-wrap: nowrap;
                  overflow: hidden;
                  text-overflow: ellipsis;
                  max-width: 500px;
                  cursor: pointer;
                }
                .user_info {
                  display: flex;
                  align-items: center;
                  & > span {
                    color: #888;
                  }
                  & > img {
                    width: 18px;
                    height: 18px;
                    margin-left: 4px;
                    margin-right: 20px;
                    border: 1px solid #aaa;
                  }
                }
              }
              .reaction {
                display: flex;
                flex-direction: row;
                gap: 10px;
                justify-content: flex-start;
                & > span {
                  display: flex;
                  gap: 4px;
                  align-items: center;
                }
              }
            }
          }
        }
      }
    }
    .review_wrap {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      gap: 60px 20px;
      .reviews {
        flex-grow: 1;
        min-width: 295px;
        .body_wrap {
          & > ul {
            .item {
              margin-top: 20px;
              .type {
                width: 68px;
                padding: 2px 8px;
                border: 1px solid #aaa;
                border-radius: 5px;
                color: #aaa;
                height: 26px;
                text-align: center;
                text-wrap: nowrap;
              }
              .content {
                margin-top: 8px;
                display: flex;
                flex-direction: column;
                gap: 2px;
                overflow: hidden;
                cursor: pointer;
                .highlight {
                  text-wrap: nowrap;
                  overflow: hidden;
                  text-overflow: ellipsis;
                }
                .info {
                  display: flex;
                  flex-direction: row;
                  justify-content: space-between;
                  flex-wrap: nowrap;
                  overflow: hidden;
                  gap: 10px;
                  .corp_name {
                    color: #888;
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                  }
                  .score {
                    color: #888;
                    display: flex;
                    gap: 2px;
                    align-items: center;
                  }
                }
              }
            }
          }
        }
      }
      .hot_corp_wrap {
        min-width: 295px;
        max-width: 305px;
        flex-grow: 1;
        .header {
          flex-direction: row;
          justify-content: space-between;
          align-items: center;
          .hot_corp_icon {
            width: 28px;
            height: 28px;
          }
        }
        & > ul {
          margin-top: 20px;
          .slider_corp {
            & > div {
              & > div {
                & > div {
                  padding: 0 0 20px;
                }
              }
            }
          }
          .item {
            border: 1px solid #aaa;
            border-radius: 5px;
            padding: 16px;
            display: flex;
            flex-direction: column;
            gap: 4px;
            & > h5 {
              cursor: pointer;
            }
            .description {
              width: fit-content;
              border: #6269f5 solid 1px;
              border-radius: 5px;
              background-color: #eeefff;
              color: #6269f5;
              height: 24px;
              padding: 2px 8px;
              margin-top: 4px;
              display: flex;
              gap: 4px;
              & > img {
                width: 20px;
                height: 20px;
              }
            }
          }
        }
      }
    }
  }
  .bottom_banner {
    margin: 60px auto;
    max-width: 1280px;
    width: 86%;
    background-color: #aaa;
    height: 178px;
  }
}

/* main end */
/* mobile-end */

@media screen and (min-width: 768px) {
  .home_wrap {
    margin-top: 80px;
    .banner_wrap {
      .banner {
        height: 400px;
        .content {
          left: 40px;
          bottom: 28px;
          color: #fafafa;
        }
      }
    }
    .content_wrap {
      .review_wrap,
      .community_wrap {
        margin-top: 120px;
        .header {
          flex-direction: row;
          flex-wrap: nowrap;
          align-items: center;
          .tab_wrap {
            .btn_more {
              font-size: 1.8rem;
            }
          }
        }
      }
      .community_wrap {
        .body_wrap {
          & > ul {
            .item {
              display: flex;
              flex-direction: row;
              gap: 8px;
              overflow: hidden;
              .type {
                flex-shrink: 0;
                height: 29px;
              }
              .content {
                flex-grow: 1;
                margin-top: 0;
                justify-content: space-between;
                .title_wrap {
                  width: 100%;
                  flex-direction: row;
                  flex-grow: 1;
                  flex-wrap: nowrap;
                  overflow: hidden;
                  .title {
                    max-width: unset;
                    flex-grow: 1;
                  }
                  .user_info {
                    flex-shrink: 0;
                    margin-left: unset;
                  }
                }
              }
            }
          }
        }
      }
      .review_wrap {
        flex-wrap: nowrap;
        .reviews {
          .body_wrap {
            & > ul {
              .item {
                .type {
                  flex-shrink: 0;
                  height: 29px;
                }
              }
            }
          }
        }
        .hot_corp_wrap {
          .header {
            .hot_corp_icon {
              width: 32px;
              height: 32px;
            }
          }
          & > ul {
            .item {
              .description {
                height: 26px;
              }
            }
          }
        }
      }
    }
  }
}

@media screen and (min-width: 1280px) {
  .home_wrap {
    .banner_wrap {
      max-width: unset;
      width: 100%;
      .banner {
        max-width: 1280px;
        height: 320px;
      }
    }
    .content_wrap {
      max-width: 1280px;
      .review_wrap,
      .community_wrap {
        margin-top: 160px;
      }
      .community_wrap {
        .body_wrap {
          & > ul {
            .item {
              gap: 10px;
              .content {
                flex-direction: row;
                gap: 20px;
                align-items: center;
                .title_wrap {
                  width: unset;
                  gap: 20px;
                }
                .reaction {
                  width: 183px;
                }
              }
            }
          }
        }
      }
      .review_wrap {
        .reviews {
          .body_wrap {
            & > ul {
              .item {
                display: flex;
                flex-direction: row;
                align-items: center;
                gap: 10px;
                .content {
                  flex-grow: 1;
                  flex-direction: row;
                  gap: 20px;
                  margin-top: 0;
                  .highlight {
                    flex-grow: 1;
                  }
                  .info {
                    width: 275px;
                    flex-shrink: 0;
                  }
                }
              }
            }
          }
        }
      }
    }
    .bottom_banner {
      height: 280px;
    }
  }
}

